Analysis for redundant options.